# CFspider

./: .gitignore  LICENSE  MANIFEST.in  README.md  agent-skills.md  cloak_test.py  edgetunnel_proxy.py  obfuscate.js  package-lock.json  package.json  pyproject.toml  setup.py  test.py  test_antibot.py  test_api.py  test_download.py  test_httpx.py  test_impersonate.py  vless-configs.txt  workers.js  wrangler.toml  破皮版workers.js
.github/: FUNDING.yml
api-docs/: README.md
api-docs/css/: link-styles.css  style.css
api-docs/js/: main.js
browser-extension/: README.md  content.css  content.js  manifest.json  popup.js
cfspider/: __init__.py  api.py  async_api.py  async_session.py  browser.py  cli.py  export.py  mirror.py  session.py  stealth.py  workers_manager.py
cfspider-browser/: .gitignore  LEARNING_SYSTEM.md  README.md  TESTING_GUIDE.md  UPDATE_LOG.md  electron-builder.json  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
cfspider-browser/electron/: main.ts  preload.ts
cfspider-browser/src/: App.tsx  index.css  vite-env.d.ts
cfspider-browser/src/components/AIChat/: AIChat.tsx  InputBox.tsx  MessageList.tsx
cfspider-browser/src/components/Browser/: AddressBar.tsx  Browser.tsx  TabBar.tsx  Toolbar.tsx  VirtualMouse.tsx
cfspider-browser/src/components/DataPanel/: DataPanel.tsx
cfspider-browser/src/components/Settings/: SettingsModal.tsx
cfspider-browser/src/services/: ai.ts  builtinSkills.ts  extractor.ts  heartbeat.ts  rules.ts  skills.ts
cfspider-browser/src/services/skills/: README.md  auto-login.md  baidu-search.md  bilibili.md  bing-search.md  click-search-result.md  github-navigation.md  github.md  iqiyi-navigation.md  navigate-to-website.md  taobao.md  tencent-video.md
cfspider-browser/src/shims/: use-sync-external-store.ts
cfspider-browser/src/store/: index.ts
docs/: zhihu_article.md
workers/: workers.js
x27cn/: README.md  debug_mangle.py  pyproject.toml
x27cn-pages/: X27CN_ALGORITHM.md
x27cn/x27cn/: __init__.py  advanced.py  anti_crawl.py  cli.py  minify.py  password.py
