[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x27cn"
version = "1.4.1"
description = "X27CN - Advanced code obfuscation, encryption and anti-crawl protection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "CFspider", email = "cfspider@example.com"}
]
keywords = [
    "encryption",
    "obfuscation",
    "security",
    "encoding",
    "html",
    "javascript",
    "anti-debug",
    "anti-crawl",
    "code-protection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
x27cn = "x27cn.cli:main"

[project.urls]
Homepage = "https://github.com/violettoolssite/CFspider"
Documentation = "https://github.com/violettoolssite/CFspider#x27cn-加密库"
Repository = "https://github.com/violettoolssite/CFspider"
Issues = "https://github.com/violettoolssite/CFspider/issues"

[tool.setuptools.packages.find]
where = ["."]

